--- a/styles/reset.css
+++ b/styles/reset.css
@@ -17,6 +17,7 @@ table,tr,th,td {border-collapse: collapse;}
 ul,ol,li {list-style:none;}
 a {color:#000; text-decoration: none;}
 input {outline:none; border:0;}
+select {cursor: pointer;}
 button {cursor:pointer; border:0;}
 fieldset {border:0;}
 .skip {display:none;}
