--- a/styles/login.css
+++ b/styles/login.css
@@ -47,7 +47,10 @@ header .middle .left {
 header .middle .left #inform_btn {
     margin-right: 15px; width: 125px;
     background: #ffc128; border-radius: 50px; padding: 7px 18px;
-    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center;
+    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center; transition: background 0.2s;
+} 
+header .middle .left #inform_btn:hover {
+    background: #e1676f;
 }
 header .middle .left #inform_btn img {
     width: 22px; height: 22px; margin-right: 5px;
@@ -75,6 +78,7 @@ header .middle .right #search_frm fieldset {
     width: 240px; height: 45px; border-radius: 50px;
     background: #fff; display: flex; 
     flex-flow: row nowrap; align-items: center;
+    border: 1px solid #787878;
 } 
 header .middle .right #search_frm fieldset #txt_input {
     width: 75%;
@@ -97,6 +101,10 @@ header .bottom #nav a {
     font-size: 1.333rem; letter-spacing: -0.04em;
     margin-right: 30px;
 }
+header .bottom #nav a:hover,
+header .bottom #nav .face span:hover,
+header .bottom #nav .eye span:hover,
+header .bottom #nav .lip span:hover {font-weight: 700;}
 header .bottom #nav .face,
 header .bottom #nav .eye,
 header .bottom #nav .lip {
@@ -146,7 +154,7 @@ main .login_bg .login #login_frm fieldset ul .id {
 }
 main .login_bg .login #login_frm fieldset ul .id input {
     background: none;
-    width: 100%; padding: 17.5px 181px 17.5px 20px;
+    width: 100%; padding: 17.5px 150px 17.5px 20px;
     font-size: 1.333rem; letter-spacing: -0.04em; color: #7a7a7a;
 }
 /* frm-pw */
@@ -171,17 +179,35 @@ main .login_bg .login #login_frm fieldset ul .login_btn #login_btn {
     font-weight: 700; font-size: 1.333rem; letter-spacing: -0.04em;
     color: #fff; background: #7a7a7a; width: 400px;
     border-radius: 10px; padding: 22.5px 0;
+    transition: background 0.2s;
+}
+main .login_bg .login #login_frm fieldset ul .login_btn #login_btn:hover {
+    background: #5a5a5a;
 }
 /* frm-id_pw */
 main .login_bg .login #login_frm fieldset ul .id_pw {
     display: flex; flex-flow: row nowrap; justify-content: space-between;
     align-items: center; width: 400px; margin-bottom: 40px;
 }
-main .login_bg .login #login_frm fieldset ul .id_pw .check {
-    background: url(../images/login/check.png); display: inline-block;
+
+/* checkbox */
+main .login_bg .login #login_frm fieldset ul .id_pw .checkbox {
+    display: flex; flex-flow: row nowrap; justify-content: space-between;
+    align-items: center; 
 }
-main .login_bg .login #login_frm fieldset ul .id_pw label {font-weight: 500; font-size: 1.333rem; letter-spacing: -0.04em; color: #434343;}
-main .login_bg .login #login_frm fieldset ul .id_pw label #save {}
+main .login_bg .login #login_frm fieldset ul .id_pw .checkbox input[id="chkbox"] {display: none;}
+main .login_bg .login #login_frm fieldset ul .id_pw .checkbox input[id="chkbox"] + label em {
+    display: inline-block; background: url(../images/login/check_off.png) 0 0 no-repeat;
+    width: 22px; height: 22px; margin-right: 10px; vertical-align: middle;
+}
+main .login_bg .login #login_frm fieldset ul .id_pw .checkbox input[id="chkbox"]:checked + label em {
+    background: url(../images/login/check_on.png) 0 0 no-repeat;
+}
+main .login_bg .login #login_frm fieldset ul .id_pw .checkbox label {
+    font-weight: 500; font-size: 1.333rem; letter-spacing: -0.04rem;
+    color: #434343;
+}
+
 main .login_bg .login #login_frm fieldset ul .id_pw a {
     font-size: 1.333rem; letter-spacing: -0.04em; color: #7a7a7a;
 }
@@ -212,6 +238,10 @@ main .login_bg .login #login_frm fieldset ul .join #join_btn {
     font-weight: 700; font-size: 1.333rem; letter-spacing: -0.04em;
     color: #ffc128; background: none; width: 400px;
     border-radius: 10px; padding: 22.5px 0; border: 1px solid #ffc128;
+    transition: background 0.2s;
+}
+main .login_bg .login #login_frm fieldset ul .join #join_btn:hover {
+    background: #f4f4f4;
 }
 /* frm-no_memeber */
 main .login_bg .login #login_frm fieldset ul .no_member {
@@ -220,7 +250,10 @@ main .login_bg .login #login_frm fieldset ul .no_member {
 main .login_bg .login #login_frm fieldset ul .no_member #no_member_btn {
     font-weight: 700; font-size: 1.333rem; letter-spacing: -0.04em;
     color: #434343; background: none; width: 400px;
-    border-radius: 10px; padding: 22.5px 0; border: 1px solid #7a7a7a;
+    border-radius: 10px; padding: 22.5px 0; border: 1px solid #7a7a7a; transition: background 0.2s;
+}
+main .login_bg .login #login_frm fieldset ul .no_member #no_member_btn:hover {
+    background: #f4f4f4;
 }
 /* frm-line */
 main .login_bg .login #login_frm fieldset ul .span {margin-bottom: 25px;}
@@ -230,11 +263,10 @@ main .login_bg .login #login_frm fieldset ul .span span {
 /* frm-phone_login */
 main .login_bg .login #login_frm fieldset ul .phone_login {
     background: #def0f0; border-radius: 10px;
-    width: 400px; padding: 20px 95px;
 }
 main .login_bg .login #login_frm fieldset ul .phone_login #phone_login_btn {
-    display: flex; flex-flow: row nowrap; align-items: center;
-    background: none;
+    display: flex; flex-flow: row nowrap; align-items: center;  padding: 20px 0; width: 400px;
+    background: none; justify-content: center;
 }
 main .login_bg .login #login_frm fieldset ul .phone_login #phone_login_btn img {
     width: 20px; height: 20px; margin-right: 10px; 
