--- a/styles/product_list.css
+++ b/styles/product_list.css
@@ -47,7 +47,10 @@ header .middle .left {
 header .middle .left #inform_btn {
     margin-right: 15px; width: 125px;
     background: #ffc128; border-radius: 50px; padding: 7px 18px;
-    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center;
+    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center; transition: background 0.2s;
+}
+header .middle .left #inform_btn:hover {
+    background: #e1676f;
 }
 header .middle .left #inform_btn img {
     width: 22px; height: 22px; margin-right: 5px;
@@ -75,6 +78,7 @@ header .middle .right #search_frm fieldset {
     width: 240px; height: 45px; border-radius: 50px;
     background: #fff; display: flex; 
     flex-flow: row nowrap; align-items: center;
+    border: 1px solid #787878;
 } 
 header .middle .right #search_frm fieldset #txt_input {
     width: 75%;
@@ -97,6 +101,10 @@ header .bottom #nav a {
     font-size: 1.333rem; letter-spacing: -0.04em;
     margin-right: 30px;
 }
+header .bottom #nav a:hover,
+header .bottom #nav .face span:hover,
+header .bottom #nav .eye span:hover,
+header .bottom #nav .lip span:hover {font-weight: 700;}
 header .bottom #nav .face,
 header .bottom #nav .eye,
 header .bottom #nav .lip {
@@ -296,15 +304,28 @@ main .view_way_bg .view_way .left button::after {
     display: inline-block; content: ''; width: 1px; height: 13px; background: #7a7a7a;
     margin: 0 13px;
 }
+main .view_way_bg .view_way .left button:nth-child(8)::after {display: none;}
 /* right */
 main .view_way_bg .view_way .right {
     display: flex; flex-flow: row nowrap; align-items: center;
 }
 main .view_way_bg .view_way .right #view4 {width: 27px; height: 27px;}
+main .view_way_bg .view_way .right #view4:hover {
+    background-image: url(../images/product_list/view4_hover.png);
+    background-size: cover;
+}
 main .view_way_bg .view_way .right #view4 img {width: 100%;}
 main .view_way_bg .view_way .right #view3 {width: 27px; height: 27px;}
+main .view_way_bg .view_way .right #view3:hover {
+    background-image: url(../images/product_list/view3_hover.png);
+    background-size: cover;
+}
 main .view_way_bg .view_way .right #view3 img {width: 100%;}
 main .view_way_bg .view_way .right #view2 {width: 27px; height: 27px;}
+main .view_way_bg .view_way .right #view2:hover {
+    background-image: url(../images/product_list/view2_hover.png);
+    background-size: cover;
+}
 main .view_way_bg .view_way .right #view2 img {width: 100%;}
 main .view_way_bg .view_way .right #view1_hover {width: 27px; height: 27px;}
 main .view_way_bg .view_way .right #view1_hover img {width: 100%;}
@@ -313,7 +334,6 @@ main .item_all_bg {
     width: 100%;
 }
 main .item_all_bg .item_all {
-    background-color: lavenderblush;
     width: 1280px; margin: 0 auto; display: flex; flex-flow: column nowrap;
     justify-content: space-between;
 }
@@ -324,7 +344,7 @@ main .item_all_bg .item_all .first_line {
     display: flex; flex-flow: row nowrap; 
     justify-content: space-between;
 }
-/* item1 */
+/* item1,2,3 */
 main .item_all_bg .item_all .first_line .item1,
 main .item_all_bg .item_all .first_line .item2,
 main .item_all_bg .item_all .first_line .item3 {
@@ -338,7 +358,7 @@ main .item_all_bg .item_all .first_line .item3 .top {
 main .item_all_bg .item_all .first_line .item1 .top p,
 main .item_all_bg .item_all .first_line .item2 .top p,
 main .item_all_bg .item_all .first_line .item3 .top p {
-    font-weight: 500; letter-spacing: -0.04em; color: #fff; background: #ffc128; padding: 10px; position: absolute;
+    font-weight: 500; letter-spacing: -0.04em; color: #fff; background: #ffc128; padding: 10px; position: absolute; z-index: 999;
 }
 /* item1-swiper */
 main .item_all_bg .item_all .first_line .item1 .top #purple_cushion {
@@ -429,16 +449,16 @@ main .item_all_bg .item_all .first_line .item2 .bottom .price .like img,
 main .item_all_bg .item_all .first_line .item3 .bottom .price .like img {
     width: 100%;
 }
-main .item_all_bg .item_all .first_line .item1 .bottom h3,
-main .item_all_bg .item_all .first_line .item2 .bottom h3,
-main .item_all_bg .item_all .first_line .item3 .bottom h3 {
-    width: 400px; margin-bottom: 20px;
+main .item_all_bg .item_all .first_line .item1 .bottom a,
+main .item_all_bg .item_all .first_line .item2 .bottom a,
+main .item_all_bg .item_all .first_line .item3 .bottom a {
+    width: 400px;
     font-weight: 500; font-size: 1.333rem; letter-spacing: -0.04em;
 }
 main .item_all_bg .item_all .first_line .item1 .bottom .review,
 main .item_all_bg .item_all .first_line .item2 .bottom .review,
 main .item_all_bg .item_all .first_line .item3 .bottom .review {
-    letter-spacing: -0.04em; color: #7a7a7a; margin-bottom: 20px;
+    letter-spacing: -0.04em; color: #7a7a7a; margin: 20px 0;
 }
 main .item_all_bg .item_all .first_line .item1 .bottom .arrival_promise,
 main .item_all_bg .item_all .first_line .item2 .bottom .arrival_promise,
@@ -588,16 +608,16 @@ main .item_all_bg .item_all .second_line .item5 .bottom .price .like img,
 main .item_all_bg .item_all .second_line .item6 .bottom .price .like img {
     width: 100%;
 }
-main .item_all_bg .item_all .second_line .item4 .bottom h3,
-main .item_all_bg .item_all .second_line .item5 .bottom h3,
-main .item_all_bg .item_all .second_line .item6 .bottom h3 {
-    width: 400px; margin-bottom: 20px;
+main .item_all_bg .item_all .second_line .item4 .bottom a,
+main .item_all_bg .item_all .second_line .item5 .bottom a,
+main .item_all_bg .item_all .second_line .item6 .bottom a {
+    width: 400px;
     font-weight: 500; font-size: 1.333rem; letter-spacing: -0.04em;
 }
 main .item_all_bg .item_all .second_line .item4 .bottom .review,
 main .item_all_bg .item_all .second_line .item5 .bottom .review,
 main .item_all_bg .item_all .second_line .item6 .bottom .review {
-    letter-spacing: -0.04em; color: #7a7a7a; margin-bottom: 20px;
+    letter-spacing: -0.04em; color: #7a7a7a; margin: 20px 0;
 }
 main .item_all_bg .item_all .second_line .item4 .bottom .arrival_promise,
 main .item_all_bg .item_all .second_line .item5 .bottom .arrival_promise,
@@ -747,16 +767,16 @@ main .item_all_bg .item_all .third_line .item8 .bottom .price .like img,
 main .item_all_bg .item_all .third_line .item9 .bottom .price .like img {
     width: 100%;
 }
-main .item_all_bg .item_all .third_line .item7 .bottom h3,
-main .item_all_bg .item_all .third_line .item8 .bottom h3,
-main .item_all_bg .item_all .third_line .item9 .bottom h3 {
-    width: 400px; margin-bottom: 20px;
+main .item_all_bg .item_all .third_line .item7 .bottom a,
+main .item_all_bg .item_all .third_line .item8 .bottom a,
+main .item_all_bg .item_all .third_line .item9 .bottom a {
+    width: 400px;
     font-weight: 500; font-size: 1.333rem; letter-spacing: -0.04em;
 }
 main .item_all_bg .item_all .third_line .item7 .bottom .review,
 main .item_all_bg .item_all .third_line .item8 .bottom .review,
 main .item_all_bg .item_all .third_line .item9 .bottom .review {
-    letter-spacing: -0.04em; color: #7a7a7a; margin-bottom: 20px;
+    letter-spacing: -0.04em; color: #7a7a7a; margin: 20px 0;
 }
 main .item_all_bg .item_all .third_line .item7 .bottom .arrival_promise,
 main .item_all_bg .item_all .third_line .item8 .bottom .arrival_promise,
@@ -794,6 +814,16 @@ main .item_all_bg .item_all .third_line .item7 .bottom .special p:nth-child(1),
 main .item_all_bg .item_all .third_line .item8 .bottom .special p:nth-child(1),
 main .item_all_bg .item_all .third_line .item9 .bottom .special p:nth-child(1) {
     margin-right: 10px;
+}
+
+/* page */
+main .page_bg {width: 100%;}
+main .page_bg .page {
+    width: 1280px; margin: 0 auto; padding: 50px 0; text-align: center;
+}
+main .page_bg .page a {
+    font-weight: 500; letter-spacing: -0.04em; color: #fff;
+    padding: 11px 12px; background: #ffc128; text-align: center;
 }
 
 /* footer */
