--- a/styles/qna.css
+++ b/styles/qna.css
@@ -47,7 +47,10 @@ header .middle .left {
 header .middle .left #inform_btn {
     margin-right: 15px; width: 125px;
     background: #ffc128; border-radius: 50px; padding: 7px 18px;
-    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center;
+    display: flex; flex-flow: row nowrap; align-items: center; justify-content: center; transition: background 0.2s;
+}
+header .middle .left #inform_btn:hover {
+    background: #e1676f;
 }
 header .middle .left #inform_btn img {
     width: 22px; height: 22px; margin-right: 5px;
@@ -75,6 +78,7 @@ header .middle .right #search_frm fieldset {
     width: 240px; height: 45px; border-radius: 50px;
     background: #fff; display: flex; 
     flex-flow: row nowrap; align-items: center;
+    border: 1px solid #787878;
 } 
 header .middle .right #search_frm fieldset #txt_input {
     width: 75%;
@@ -97,6 +101,10 @@ header .bottom #nav a {
     font-size: 1.333rem; letter-spacing: -0.04em;
     margin-right: 30px;
 }
+header .bottom #nav a:hover,
+header .bottom #nav .face span:hover,
+header .bottom #nav .eye span:hover,
+header .bottom #nav .lip span:hover {font-weight: 700;}
 header .bottom #nav .face,
 header .bottom #nav .eye,
 header .bottom #nav .lip {
