--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,12 +1,12 @@
 /* Mobile */
-@media screen and (max-width:700px) {
+@media screen and (max-width:1024px){
     /* header */
     header {}
     /* top */
     header .top_bg {
     }
     header .top_bg .top {
-        width: 670px; margin: 0 auto; display: flex; 
+        width: 97%; margin: 0 auto; display: flex; 
         flex-flow: row nowrap; justify-content: space-between;
         align-items: center;
     }
@@ -27,7 +27,7 @@
     header .top_bg .top .right .menu img {}
     /* middle */
     header .middle {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         display: flex; flex-flow: row nowrap;
         align-items: center; justify-content: space-between;
     }
@@ -54,7 +54,7 @@
     header .middle .right #search_frm fieldset #search_btn img {width: 100%;}
     /* bottom */
     header .bottom {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         padding: 27.5px 0;
     }
     header .bottom #nav {
@@ -107,7 +107,7 @@
         width: 100%; height: 60px;
     }
     main .event_bg .event {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         display: flex; flex-flow: row nowrap;
         align-items: center; padding: 0 41px;
     }
@@ -128,7 +128,7 @@
         width: 100%; height: 340px;
     }
     main .coupon_bg .coupon {
-        width: 670px; margin: 0 auto; height: 340px;
+        width: 97%; margin: 0 auto; height: 340px;
         display: flex; flex-flow: column nowrap;
         justify-content: space-between; align-items: center;
         padding: 30px 0;
@@ -177,7 +177,7 @@
     /* new_item */
     main .new_item_bg {width: 100%; position: relative;}
     main .new_item_bg .new_item {
-        width: 670px; margin: 0 auto; padding: 50px 0;
+        width: 97%; margin: 0 auto; padding: 50px 0;
     }
     main .new_item_bg .new_item h2 {
         font-weight: 700; font-size: 2.369rem ; letter-spacing: -0.04em;
@@ -269,7 +269,7 @@
     /* weekly_best */
     main .weekly_best_bg {width: 100%;}
     main .weekly_best_bg .weekly_best {
-        width: 670px; margin: 0 auto; padding: 50px 0;
+        width: 97%; margin: 0 auto; padding: 50px 0;
         display: flex; flex-flow: column nowrap;
         justify-content: space-between; align-items: center;
     }
@@ -351,7 +351,7 @@
         width: 100%;
     }
     main .category_bg .category {
-        width: 670px; display: flex; 
+        width: 97%; display: flex; 
         flex-flow: column nowrap; 
         align-items: center; padding: 50px 0;
         margin: 0 auto;
@@ -442,7 +442,7 @@
         width: 100%;
     }
     main .best_review_bg .best_review {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         display: flex; flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center; padding: 50px 0;
@@ -530,7 +530,7 @@
         width: 100%;
     }
     main .video_bg .video {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         padding: 50px 35px;
     }
     main .video_bg .video video {
@@ -543,7 +543,7 @@
         background-size: cover;
     }
     main .last_bnr_bg .last_bnr {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         padding: 50px 0; display: flex;
         flex-flow: column nowrap; 
         justify-content: space-between;
@@ -609,11 +609,11 @@
         width: 100%;
     }
     footer .contents {
-        width: 670px; margin: 0 auto;
+        width: 97%; margin: 0 auto;
         padding: 44px 0;
     }
     footer .contents .top {
-        width: 670px; margin-bottom: 15px;
+        width: 97%; margin-bottom: 15px;
     }
     footer .contents .top #fnb {
         padding: 0 0 20px 0;
@@ -640,7 +640,7 @@
         display: none;
     }
     footer .contents .bottom {
-        width: 670px;
+        width: 97%;
     } 
     footer .contents .bottom .left {
         padding-bottom: 19px;
