--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,1 +1,27 @@
 /* 반응형웹 */
+@media screen and (max-width:1280px) {
+    header .top_bg .top {width: 100%;}/* 600 */
+    header .middle {width: 100%;}/* 1020 */
+    header .bottom {width: 100%;}/* 950 */
+}/* 1280 */
+@media screen and (max-width:1020px) {
+    header .middle .left {display: none;}
+    header .middle > .middle {justify-content: space-between;}/* 650 */
+}/* 1020 */
+@media screen and (max-width:950px) {
+    header .bottom #nav a {font-size: 0.933rem;}/* 650 */
+    header .bottom #nav .face span, header .bottom #nav .eye span, header .bottom #nav .lip span {font-size: 0.933rem;}/* 650 */
+    header .bottom #nav a {margin-right: 13px;}/* 650 */
+}/* 950 */
+@media screen and (max-width:650px) {
+    header .middle .right {display: none;}
+    header .middle > .middle {justify-content: center;}/* 350 */
+    header .bottom #nav a {margin-right: 7px;}/* 600 */
+    header .bottom #nav .face span, header .bottom #nav .eye span, header .bottom #nav .lip span {margin-right: 1px;}/* 600 */
+}/* 650 */
+@media screen and (max-width:600px) {
+    header .top_bg .top .left {font-size: 0.833rem;}
+    header .top_bg .top .left .naver {margin-right: 7px;}
+    header .top_bg .top .right a {font-size: 0.833rem;}
+    header .top_bg .top .right {align-items: center;}
+}
